--- a/stepx/src/main/resources/templates/checkout.html
+++ b/stepx/src/main/resources/templates/checkout.html
@@ -22,6 +22,8 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=Playfair+Display:ital,wght@0,900;1,900&family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
     rel="stylesheet">
   <!--style of the images in this page -->
+  <meta name="_csrf" content="{{token}}">
+  <meta name="_csrf_header" content="{{headerName}}" />
 
 </head>
 
@@ -37,7 +39,7 @@
         <div class="col-lg-7 mb-4 mb-lg-0">
           <div class="login-form bg-light p-5">
             <h2 class="mb-4">Shipping Details</h2>
-            <form action = "/checkout/downloadTicket" method="POST">
+            <form action="/checkout/downloadTicket" method="POST">
               <!-- country -->
               <div class="mb-3">
                 <label for="country" class="form-label">Country</label>
@@ -54,8 +56,9 @@
               <div class="mb-4 coupon-section">
                 <label class="form-label">Coupon</label>
                 <div class="input-group">
-                  <input type="text" name="coupon" class="form-control ps-3 text-input" placeholder="Enter your coupon code">
-                  <button class="btn btn-red hvr-sweep-to-right dark-sweep" type="button" >Apply</button>
+                  <input type="text" name="coupon" class="form-control ps-3 text-input"
+                    placeholder="Enter your coupon code">
+                  <button class="btn btn-red hvr-sweep-to-right dark-sweep" type="button">Apply</button>
                 </div>
               </div>
 
@@ -81,18 +84,18 @@
 
               <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <input type="text" class="form-control ps-3 text-input" id="address" name="address" placeholder="Enter your Address"
-                  required>
+                <input type="text" class="form-control ps-3 text-input" id="address" name="address"
+                  placeholder="Enter your Address" required>
               </div>
 
               <div class="mb-4">
                 <label for="phone" class="form-label">Phone Number</label>
-                <input type="tel" class="form-control ps-3 text-input" id="phone" name="phone" placeholder="Enter your Phone Number"
-                  required>
+                <input type="tel" class="form-control ps-3 text-input" id="phone" name="phone"
+                  placeholder="Enter your Phone Number" required>
               </div>
 
+              <input type="hidden" name="_csrf" value="{{token}}">
               <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100">Continue with Order</button>
-              <input type="hidden" name="_csrf" value="{{token}}"/>
             </form>
           </div>
         </div>
@@ -106,7 +109,8 @@
               <div class="order-items">
                 <!-- individual product of the order -->
                 {{#cartItems}}
-                <div id="item-{{id_orderItem}}" class="order-item d-flex align-items-center" style="padding-bottom: 20px">
+                <div id="item-{{id_orderItem}}" class="order-item d-flex align-items-center"
+                  style="padding-bottom: 20px">
                   <div class="col-lg-2 col-md-3 col-sm-2 me-4">
                     <a href="#" title="product-image">
                       <img src="/shop/{{id}}/image/1" class="img-fluid" alt="single-product-item">
@@ -117,16 +121,17 @@
                     <div class="d-flex justify-content-between align-items-center flex-wrap">
                       <div class="input-group product-qty">
                         {{#stock}}
-                        <button type="button" class="quantity-left-minus btn btn-light rounded-0 rounded-start btn-number"
+                        <button type="button"
+                          class="quantity-left-minus btn btn-light rounded-0 rounded-start btn-number"
                           data-type="minus">
                           <svg width="16" height="16">
                             <use xlink:href="#minus"></use>
                           </svg>
                         </button>
-              
+
                         <input type="text" name="quantity" class="form-control input-number quantity quantity-input"
                           value={{quantity}} data-id="{{id_orderItem}}">
-              
+
                         <button type="button" class="quantity-right-plus btn btn-light rounded-0 rounded-end btn-number"
                           data-type="plus">
                           <svg width="16" height="16">
@@ -134,35 +139,36 @@
                           </svg>
                         </button>
                         {{/stock}}
-              
+
                         {{^stock}}
                         <p>No stock available</p>
-                        <input type="hidden" name="quantity" class="form-control input-number quantity quantity-input" value=0
-                          data-id="{{id_orderItem}}">
+                        <input type="hidden" name="quantity" class="form-control input-number quantity quantity-input"
+                          value=0 data-id="{{id_orderItem}}">
                         {{/stock}}
                       </div>
                       <div class="price-wrapper mb-2">
                         <span class="fw-bold">{{price}}</span>
                       </div>
                       <!--boton de eliminar producto en checkout-->
-                      <button class="btn btn-link text-danger p-0 mb-2" onclick="deleteItemfromCart('{{id_orderItem}}')">
+                      <button class="btn btn-link text-danger p-0 mb-2"
+                        onclick="deleteItemfromCart('{{id_orderItem}}')">
                         <svg class="close" width="16" height="16">
                           <use xlink:href="#close"></use>
                         </svg>
                       </button>
-              
+
                     </div>
                   </div>
                 </div>
                 {{/cartItems}}
-              
+
                 {{^cartItems}}
                 <div class="text-center py-4">
                   <p class="mb-0">No items in your bag yet</p>
                 </div>
                 {{/cartItems}}
               </div>
-              
+
               {{#setSubtotal}}
               <button type="submit" class="btn btn-red hvr-sweep-to-right dark-sweep w-100"
                 onclick="recalculate()">Recalculate</button>
